src/com/example/dip/good/NotifierPaymentSms.java
package com.example.dip.good;

import com.example.User;

public interface NotifierPaymentSms {

    void notifyPayment(User user);
}
