src/com/example/dip/bad/NotifierSms.java
package com.example.dip.bad;

public class NotifierSms {

    public String notifySms() {
        return "OK";
    }
}
